exemplo_ok/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-deployment
  labels:
    app: simple-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2 
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: simple-web
        image: yeasy/simple-web:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/usr/share/python"
            name: hostpath
      volumes:
        - name: hostpath
          emptyDir: {}
